--- a/res/layout/font_section_view.xml
+++ b/res/layout/font_section_view.xml
@@ -4,6 +4,8 @@
     android:orientation="horizontal"
     android:paddingBottom="@dimen/section_bottom_padding"
     android:paddingHorizontal="@dimen/section_horizontal_padding"
+    android:background="?selectableItemBackground"
+    android:clickable="true"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
@@ -32,7 +34,7 @@
         android:layout_width="@dimen/option_tile_width"
         android:layout_height="@dimen/option_tile_width"
         android:scaleType="center"
-        android:background="@drawable/option_border_color">
+        android:background="@drawable/picker_section_icon_background">
         <TextView
             android:id="@+id/thumbnail_text"
             android:layout_width="wrap_content"
