--- a/res/layout/icon_shape_section_view.xml
+++ b/res/layout/icon_shape_section_view.xml
@@ -4,6 +4,8 @@
     android:orientation="horizontal"
     android:paddingBottom="@dimen/section_bottom_padding"
     android:paddingHorizontal="@dimen/section_horizontal_padding"
+    android:background="?selectableItemBackground"
+    android:clickable="true"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
@@ -34,7 +36,7 @@
         android:layout_gravity="center_horizontal"
         android:paddingHorizontal="@dimen/option_tile_padding_horizontal"
         android:paddingVertical="@dimen/option_tile_padding_vertical"
-        android:background="@drawable/option_border_color">
+        android:background="@drawable/picker_section_icon_background">
         <ImageView
             android:id="@+id/icon_section_tile"
             android:layout_width="wrap_content"
